[emacs] Only show a single day in the agenda
By default, I usually only care about what I have marked for today. This
makes it easier to get there.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -323,7 +323,7 @@ When showing tasks for the day, I want to make sure I'm including notes from my 
 #+begin_src elisp
 (defun +mjh-org-init-agenda-h ()
   (setq org-agenda-files (list "~/org/" "~/org/journal/" "~/.config/doom/config.org")
-        org-agenda-span 1
+        org-agenda-span 'day
         org-agenda-start-day nil))
 
 (advice-add '+org-init-agenda-h :after #'+mjh-org-init-agenda-h)
