[emacs] Add support for Meson and Systemd files
I've been writing some Arch packages lately it's helpful to have syntax
highlighting for these files.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -539,3 +539,23 @@ I like to track my time on different projects using the Wakatime service. To do 
 (use-package! shadowenv
   :hook (after-init . shadowenv-global-mode))
 #+end_src
+
+** Meson
+
+#+begin_src elisp :tangle packages.el
+(package! meson-mode)
+#+end_src
+
+#+begin_src elisp
+(use-package! meson-mode)
+#+end_src
+
+** Systemd
+
+#+begin_src elisp :tangle packages.el
+(package! systemd)
+#+end_src
+
+#+begin_src elisp
+(use-package! systemd)
+#+end_src
