--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -550,6 +550,20 @@ I like to track my time on different projects using the Wakatime service. To do 
 (use-package! meson-mode)
 #+end_src
 
+** Sway
+
+[[https://swaywm.org/][Sway]] uses the same configuration language as [[https://i3wm.org/][i3]] so install that package for highlighting.
+
+#+begin_src elisp :tangle packages.el
+(package! i3wm-config-mode)
+#+end_src
+
+#+begin_src elisp
+(use-package! i3wm-config-mode
+  :config
+  (add-to-list 'auto-mode-alist '("sway/config\\'" . i3wm-config-mode)))
+#+end_src
+
 ** Systemd
 
 #+begin_src elisp :tangle packages.el
