[emacs] Adjust Org Roam capture template
With the move to Org Roam v2, the old templates didn't work any more. I
want to look into what I can do to keep them separated but haven't had
the chance yet.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -457,17 +457,8 @@ Also, bibliographic notes are an important accompanying artifact for a Zettelkas
 
 #+begin_src elisp
 (setq org-roam-capture-templates
-      '(("f" "Fleeting" plain (function org-roam-capture--get-point)
-         "%?"
-         :file-name "fleeting/%<%Y%m%d>---${slug}"
-         :head "#+title: ${title}\n#+roam_tags:\n\n* ${title}\n\n"
-         :unnarrowed t)
-
-        ("p" "Templates for permanent notes")
-        ("pb" "Permanent > Bibliographic" plain (function org-roam-capture--get-point)
-         "%?"
-         :file-name "bibliographies/%<%Y%m%d>---${slug}"
-         :head "#+title: ${title}\n#+roam_key:\n#+roam_tags:\n\n* ${title}\n\n"
+      '(("d" "Default" plain "%?" :if-new
+         (file+head "%<%Y%m%d>---${slug}.org" "#+title: ${title}\n\n")
          :unnarrowed t)))
 #+end_src
 
