--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -564,3 +564,19 @@ I like to track my time on different projects using the Wakatime service. To do 
 #+begin_src elisp
 (use-package! systemd)
 #+end_src
+
+** Searching for things at point
+
+#+begin_src emacs-lisp
+(defun +vertico/search-project-for-symbol-at-point (&optional arg)
+  "Performs a live project search from the project root for the symbol at point.
+
+If ARG (universal argument), include all files, even hidden or compressed ones,
+in the search."
+  (interactive)
+  (+vertico/project-search arg (thing-at-point 'symbol)))
+
+(map! :leader
+      (:prefix-map ("s" . "search")
+       :desc "Seach project for thing at point" "P" #'+vertico/search-project-for-symbol-at-point))
+#+end_src
