[emacs] Add support for Cucumber feature files
I worked on a project recently that uses Cucumber so I needed this support.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -520,6 +520,16 @@ I like to track my time on different projects using the Wakatime service. To do 
     (global-wakatime-mode +1)))
 #+end_src
 
+** Cucumber
+
+#+begin_src elisp :tangle packages.el
+(package! feature-mode)
+#+end_src
+
+#+begin_src elisp
+(use-package! feature-mode)
+#+end_src
+
 **  Shadowenv
 
 #+begin_src elisp :tangle packages.el
