[wakatime] Disable Wakatime on work computers
Instead of deleting configuration and dealing with it or relying on
fragile machine names, this introduces a convention for me to disable
Wakatime on select computers.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -506,15 +506,15 @@ When editing ~udev~ rules, it's easy to make a syntax error since you're writing
 
 ** Wakatime
 
-I like to track my time on different projects using the Wakatime service. To do so, it's easiest to use its global mode, so I enable that here:
+I like to track my time on different projects using the Wakatime service. To do so, it's easiest to use its global mode, so I enable that here unless I'm on a work computer, where it isn't allowed:
 
 #+begin_src elisp :tangle packages.el
-(unless (string= (system-name) "michael-herold.local")
+(unless (getenv "NO_WAKATIME")
   (package! wakatime-mode))
 #+end_src
 
 #+begin_src elisp
-(unless (string= (system-name) "michael-herold.local")
+(unless (getenv "NO_WAKATIME")
   (use-package! wakatime-mode
     :config
     (global-wakatime-mode +1)))
