[mac] Set the screenshot directory
I loathe having my screenshots go to my desktop and instead prefer them
to live in a special folder in Pictures. This change sets the location
when running the command on macOS.

--- a/install
+++ b/install
@@ -14,4 +14,8 @@ if [ "$SPIN" ]; then
     rcup -v
 
     tic -x -o ~/.terminfo ~/.local/share/kitty/terminfo
+elif [[ $OSTYPE == darwin* ]]; then
+    mkdir -p "$HOME/Pictures/Screenshots"
+
+    defaults write com.apple.screencapture location $HOME/Pictures/Screenshots
 fi
