[mac] Add graphviz for visualizations
Graphviz is ugly, but sometimes it's nice to throw a visualization
together quickly.

--- a/install
+++ b/install
@@ -37,6 +37,7 @@ elif [[ $OSTYPE == darwin* ]]; then
       fzf \
       fzy \
       gpg \
+      graphviz \
       htop \
       neovim \
       pinentry-mac \
