[emacs] Replace isearch with Consult
Incremental search when using Evil is of limited utility because you end
up using `/` or `?` more often than `C-s` or `C-r`. However, having the
ability to see _all_ matches of a search in a file — and then act on
them — is useful.

This replaces `C-s` (`isearch-forward`) and `C-r` (`isearch-backward`)
with `consult-line` to make them more useful.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -631,3 +631,10 @@ in the search."
       (:prefix-map ("s" . "search")
        :desc "Seach project for thing at point" "P" #'+vertico/search-project-for-symbol-at-point))
 #+end_src
+
+** Searching for things in the current file
+
+#+begin_src emacs-lisp
+(define-key global-map [remap isearch-backward] 'consult-line)
+(define-key global-map [remap isearch-forward] 'consult-line)
+#+end_src
