[emacs] Add a journal section to org-roam dailies
This gives me a place to do [interstitial journaling][1] throughout the
day, when it occurs to me. I still need to be better about it, but this
helps a bit.

[1]: https://betterhumans.pub/replace-your-to-do-list-with-interstitial-journaling-to-increase-productivity-4e43109d15ef

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -494,7 +494,7 @@ The process of capturing notes in my Roam configuration is still a work in progr
 #+begin_src elisp
 (setq org-roam-dailies-capture-templates
       '(("d" "default" entry "* %?" :target
-         (file+head "%<%Y-%m-%d>.org" "#+title: %<%Y-%m-%d>\n\n* [[id:9e332f95-ef6b-41f5-974c-154504d1b23d][Top of Mind]]\n"))))
+         (file+head "%<%Y-%m-%d>.org" "#+title: %<%Y-%m-%d>\n\n* [[id:9e332f95-ef6b-41f5-974c-154504d1b23d][Top of Mind]]\n\n* Journal\n"))))
 #+end_src
 
 #+begin_src elisp :tangle packages.el
