[zsh] Inline major plugins into the repo
I got sick of needing to install the package and manage the paths for
these. Inlining them into the repo will make things easier when setting
up new computers.

--- a/install
+++ b/install
@@ -48,10 +48,7 @@ elif [[ $OSTYPE == darwin* ]]; then
       tmux \
       vim \
       wakatime-cli \
-      zsh \
-      zsh-autosuggestions \
-      zsh-history-substring-search \
-      zsh-syntax-highlighting \
+      zsh
 
     brew install emacs-plus@28 \
       --with-no-frame-refocus \
