[mac] Switch alacritty font rendering
This change accounts for a change in Alacritty where thin strokes had
not been working since the release of Big Sur. It uses the recommended
approach of setting the font smoothing at the operating system level.

--- a/install
+++ b/install
@@ -20,6 +20,7 @@ elif [[ $OSTYPE == darwin* ]]; then
     mkdir -p "$HOME/Pictures/Screenshots"
 
     defaults write com.apple.screencapture location $HOME/Pictures/Screenshots
+    defaults write -g AppleFontSmoothing -int 0
 
     if ! command -v brew >/dev/null; then
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
