[emacs] Do not prompt to load theme on toggle
This change makes it so Emacs trusts the theme upon first use instead of
asking whether it should.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -80,8 +80,8 @@ When I'm in daylight, I switch to ~apropospriate-light~. That is easily done thr
 (defun mjh-toggle-theme ()
   (interactive)
   (if (eq doom-theme 'apropospriate-dark)
-      (load-theme 'apropospriate-light)
-    (load-theme 'apropospriate-dark)))
+      (load-theme 'apropospriate-light t)
+    (load-theme 'apropospriate-dark t)))
 
 (map! :leader
       (:prefix ("t" . "toggle")
