[install] Ensure Overmind is installed
Overmind is my preferred process manager because it uses ptys and allows
you to switch to each process with Tmux. This ensures that it's
installed on Macs.

--- a/install
+++ b/install
@@ -40,6 +40,7 @@ elif [[ $OSTYPE == darwin* ]]; then
       graphviz \
       htop \
       neovim \
+      overmind \
       pinentry-mac \
       reattach-to-user-namespace \
       rcm \
