[emacs] Add an elfeed server
I am in the process of trying out elfeed as a replacement for my RSS
reader. To make it so I can share state across my devices, I am using
elfeed-web connected to my home server. This home server runs a minimal
Emacs in the background that installs its dependencies, then runs an
elfeed sync every 30 seconds via a timer.

To enable reading in Emacs, I use Syncthing to synchronize the elfeed
store across machines. I'm hoping this will work well enough and not
cause conflicts whenever I switch between devices.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -515,6 +515,17 @@ The automatic pairing for smartparens' =`= pair gets applied within Org mode whe
   (sp-local-pair 'org-mode "'" nil :actions :rem))
 #+end_src
 
+* Elfeed
+
+I'm testing out Elfeed as a replacement for my current RSS reader that is trying way too hard to monetize more.
+
+#+begin_src elisp
+(use-package! elfeed
+  :init
+  (setq elfeed-db-directory (expand-file-name "db/" "~/.local/state/elfeed/")
+        elfeed-enclosure-default-dir (expand-file-name "enclosures/" "~/.local/state/elfeed/")))
+#+end_src
+
 * Miscellaneous
 ** Editing udev rules
 
